ops/k8s/base/orders/ingress.yaml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: orderonline.com
      http:
        paths:
          - path: /orders(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80
